--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="contenedor">
-      <div class="cont_x">
+      <div class="cont_x" id="cont_x">
         <span></span>
         <span></span>
         <span></span>
