--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -31,7 +31,9 @@
         <span></span>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+
   </body>
   <!-- Como hacer un MENU X o  MENU hamburguesa  2018 - Efectos css -->
 </html>
