--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Menu Hamburguesa | Genarogg</title>
+    <title>Boton Hamburguesa | Genarogg</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -31,9 +31,12 @@
         <span></span>
       </div>
     </div>
+    <div id="buttonBrand"></div>
+    <!--Carga de script-->
+    <script src="https://genarogg.github.io/link-To-my-brand/js/main.js"></script>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
-
   </body>
   <!-- Como hacer un MENU X o  MENU hamburguesa  2018 - Efectos css -->
 </html>
